resolved an overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -284,11 +284,30 @@
 .contact_flex{
   display: flex; justify-content: space-between;
 }
+.contact_details{
+  display: flex; justify-content: space-between;
+}
+.contact_details1{
+  width: 45%;
+}
+.contact_details2{
+  width: 55%;
+}
+.contact_details2_sub{
+  width: 80%; margin: auto;
+}
+.contact_details1_sub{
+  width: 80%; margin: auto;
+}
+
 
 #loader{
   display: none;
 }
 
+#err, #success{
+  font-family: monospace; font-size: 12px;
+}
 
 
 
@@ -304,6 +323,18 @@
   }
   .about_details1_flex{
     display: block; text-align: left;
+  }
+  .contact_details{
+    display: block;
+  }
+  .contact_details1{
+    width: 100%;
+  }
+  .contact_details2{
+    width: 100%; margin-top: 4em;
+  }
+  .inp-com{
+    width: 98%;
   }
 }
 
@@ -360,7 +391,10 @@
     display: block;
   }
   .inp-bg{
-    width: 97%;
+    width: 100%;
+  }
+  .inp-com{
+    width: 100%;
   }
 }
 
@@ -374,5 +408,8 @@
   }
   .card_one{
     width: 100%;
+  }
+  .contact_details2_sub{
+    width: 90%; margin-left: 7px;
   }
 }
